split jest config

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>react-startkit</title>
+  <title>react-starter-kit</title>
   <style>
     .boxLoading {
       width: 50px;
